objects/maps__AdvRouteOutputType__c.object
<CustomObject>
    <description>This holds Advanced Route output type configurations</description>
    <fields>
        <fullName>maps__AssociatedObjectFieldMapping__c</fullName>
        <description>This is a JSON object that holds the mapping of different Routable objects to the output type</description>
        <label>Associated Object Field Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__AvailableOutputTypeFor__c</fullName>
        <description>These are the selected route objects that this output type is available for</description>
        <label>Available Output Type For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DefaultValues__c</fullName>
        <description>This is a JSON object that holds the default values for any fields</description>
        <label>Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__EndDateTimeField__c</fullName>
        <description>This is the field that holds the end datetime</description>
        <label>End DateTime Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Object__c</fullName>
        <description>This is the api of the output object</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__StartDateTimeField__c</fullName>
        <description>This is the field that holds the start date time</description>
        <label>Start DateTime Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__UserField__c</fullName>
        <description>This is the field that associates the user to the output</description>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Advanced Route Output Type</label>
    <nameField>
        <label>Maps Advanced Route Output Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Output Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>